fixing responsivity and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -622,8 +622,7 @@ select::-ms-expand {
 }
 
 .link-underline-black {
-  background-image: linear-gradient(transparent, transparent),
-  linear-gradient(#f2c, #f2c);
+  @apply bg-gradient-to-t from-primary to-primary dark:from-secondary dark:to-secondary;
 }
 
 .link-underline:hover {
